k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: clica-sso
  labels:
    name: clica-sso
