k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clica-sso-frontend
  namespace: clica-sso
  labels:
    app: clica-sso-frontend
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: clica-sso-frontend
  template:
    metadata:
      labels:
        app: clica-sso-frontend
    spec:
      serviceAccountName: jenkins-deployer
      containers:
        - name: frontend
          image: docker.io/sispsolutions/clica-sso-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              memory: "64Mi"
              cpu: "20m"
            limits:
              memory: "128Mi"
              cpu: "200m"

          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 2

---
apiVersion: v1
kind: Service
metadata:
  name: clica-sso-frontend-service
  namespace: clica-sso
  labels:
    app: clica-sso-frontend
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: clica-sso-frontend
